--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
-        "baseUrl": "src"
+        "baseUrl": "."
     },
     "include": [
-        "src"
+        "src",
+        "public"
     ]
 }
