--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hamburger-menu": "^1.2.1",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
